[gd_scene load_steps=21 format=3 uid="uid://b32glqlj34qgx"]

[ext_resource type="Script" path="res://mainmenu.gd" id="1_nk1tt"]
[ext_resource type="Texture2D" uid="uid://jvke7c1da331" path="res://main_menu/label_new_game.png" id="2_bkycp"]
[ext_resource type="PackedScene" uid="uid://pbmyh1qru7p" path="res://characters/happy_boo/happy_boo.tscn" id="3_a10ml"]
[ext_resource type="PackedScene" uid="uid://ogik4s70pgwl" path="res://characters/slime/slime.tscn" id="4_5dw0s"]

[sub_resource type="LabelSettings" id="LabelSettings_5tkl5"]
font_size = 62

[sub_resource type="LabelSettings" id="LabelSettings_kswcu"]
font_size = 52

[sub_resource type="LabelSettings" id="LabelSettings_3m0ym"]
font_size = 54

[sub_resource type="LabelSettings" id="LabelSettings_ag0ll"]
font_size = 54

[sub_resource type="LabelSettings" id="LabelSettings_28qhq"]
font_size = 54

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3mvg0"]
bg_color = Color(1, 0.0901961, 0.0588235, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="LabelSettings" id="LabelSettings_7jx6o"]
font_size = 24
outline_color = Color(0.411765, 0.411765, 0.411765, 1)

[sub_resource type="LabelSettings" id="LabelSettings_inano"]
font_size = 52
font_color = Color(0.0509804, 0.666667, 0.8, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bgoao"]
font_size = 52
font_color = Color(0.0509804, 0.666667, 0.8, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7iw72"]
font_size = 52
font_color = Color(0.0509804, 0.666667, 0.8, 1)

[sub_resource type="LabelSettings" id="LabelSettings_excsn"]
font_size = 52
font_color = Color(0.0509804, 0.666667, 0.8, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rs4ii"]
font_size = 54

[sub_resource type="LabelSettings" id="LabelSettings_rudnm"]
font_size = 54

[sub_resource type="LabelSettings" id="LabelSettings_3jjmt"]
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_pltci"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_pmlq7"]
font_size = 32

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_nk1tt")

[node name="end_game" type="Node2D" parent="."]

[node name="GameOver" type="CanvasLayer" parent="end_game"]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="end_game/GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.0980392, 0.0980392, 0.701961)

[node name="Label" type="Label" parent="end_game/GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -45.0
offset_right = 140.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
text = "You Died"
label_settings = SubResource("LabelSettings_5tkl5")

[node name="RestartButton" type="Button" parent="end_game/GameOver/ColorRect/Label"]
process_mode = 3
light_mask = 0
visibility_layer = 4
layout_mode = 0
offset_left = -8.0
offset_top = 146.0
offset_right = 287.0
offset_bottom = 268.0
icon = ExtResource("2_bkycp")
icon_alignment = 1

[node name="end_game_score" type="Node2D" parent="end_game/GameOver/ColorRect"]

[node name="score" type="Label" parent="end_game/GameOver/ColorRect/end_game_score"]
offset_left = 852.0
offset_top = 410.0
offset_right = 1005.0
offset_bottom = 490.0
text = "Score:"
label_settings = SubResource("LabelSettings_kswcu")

[node name="points" type="Label" parent="end_game/GameOver/ColorRect/end_game_score"]
offset_left = 1025.0
offset_top = 412.0
offset_right = 1178.0
offset_bottom = 492.0
text = "0"
label_settings = SubResource("LabelSettings_kswcu")

[node name="main_menu" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="main_menu"]
offset_right = 1920.0
offset_bottom = 1078.0

[node name="QuitButton" type="Button" parent="main_menu/ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -201.0
offset_top = -286.0
offset_right = 201.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
icon_alignment = 1

[node name="Label" type="Label" parent="main_menu/ColorRect/QuitButton"]
layout_mode = 0
offset_right = 402.0
offset_bottom = 185.0
text = "Quit"
label_settings = SubResource("LabelSettings_3m0ym")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="main_menu/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = -423.0
offset_right = 201.0
offset_bottom = -237.0
grow_horizontal = 2
grow_vertical = 2
icon_alignment = 1

[node name="Label" type="Label" parent="main_menu/ColorRect/PlayButton"]
layout_mode = 0
offset_right = 402.0
offset_bottom = 185.0
text = "Play Game"
label_settings = SubResource("LabelSettings_ag0ll")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsButton" type="Button" parent="main_menu/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = -93.0
offset_right = 201.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
icon_alignment = 1

[node name="Label" type="Label" parent="main_menu/ColorRect/SettingsButton"]
layout_mode = 0
offset_right = 402.0
offset_bottom = 185.0
text = "Options"
label_settings = SubResource("LabelSettings_28qhq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar1" type="ProgressBar" parent="main_menu/ColorRect"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 636.0
offset_top = 327.0
offset_right = 1328.0
offset_bottom = 379.0
theme_override_colors/font_color = Color(0.917647, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.92549, 0, 0, 1)
theme_override_styles/fill = SubResource("StyleBoxFlat_3mvg0")
min_value = 100.0
value = 100.0
show_percentage = false

[node name="Label1" type="Label" parent="main_menu/ColorRect/ProgressBar1"]
unique_name_in_owner = true
visible = false
modulate = Color(0, 0, 0, 1)
top_level = true
light_mask = 0
visibility_layer = 2
layout_mode = 0
offset_left = 674.0
offset_top = 334.0
offset_right = 1288.0
offset_bottom = 376.0
text = "Please type in your twitch username under \"Options\""
label_settings = SubResource("LabelSettings_7jx6o")

[node name="HappyBoo" parent="main_menu/ColorRect" instance=ExtResource("3_a10ml")]
unique_name_in_owner = true
top_level = true
position = Vector2(339, 563)
scale = Vector2(2.51033, 2.51033)

[node name="Slime" parent="main_menu/ColorRect" instance=ExtResource("4_5dw0s")]
unique_name_in_owner = true
top_level = true
position = Vector2(1552, 547)
scale = Vector2(2.37277, 2.37277)

[node name="in_game" type="Node2D" parent="."]

[node name="GameUI" type="CanvasLayer" parent="in_game"]
visible = false

[node name="in_game_score" type="Node2D" parent="in_game/GameUI"]

[node name="score" type="Label" parent="in_game/GameUI/in_game_score"]
offset_left = 21.0
offset_right = 174.0
offset_bottom = 80.0
text = "Score:"
label_settings = SubResource("LabelSettings_inano")

[node name="points" type="Label" parent="in_game/GameUI/in_game_score"]
offset_left = 189.0
offset_right = 246.0
offset_bottom = 80.0
text = "0"
label_settings = SubResource("LabelSettings_bgoao")

[node name="in_game_xp" type="Node2D" parent="in_game/GameUI"]

[node name="score" type="Label" parent="in_game/GameUI/in_game_xp"]
offset_left = 21.0
offset_top = 60.0
offset_right = 174.0
offset_bottom = 140.0
text = "XP Level:"
label_settings = SubResource("LabelSettings_7iw72")

[node name="points" type="Label" parent="in_game/GameUI/in_game_xp"]
offset_left = 259.0
offset_top = 61.0
offset_right = 316.0
offset_bottom = 141.0
text = "0"
label_settings = SubResource("LabelSettings_excsn")

[node name="UpgradeUI" type="CanvasLayer" parent="in_game"]
visible = false

[node name="ColorRect" type="ColorRect" parent="in_game/UpgradeUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.0980392, 0.0980392, 0.701961)

[node name="PauseUI" type="CanvasLayer" parent="in_game"]
visible = false

[node name="ColorRect" type="ColorRect" parent="in_game/PauseUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.0980392, 0.0980392, 0.701961)

[node name="ResumeGameFromPause" type="Button" parent="in_game/PauseUI/ColorRect"]
process_mode = 3
layout_mode = 0
offset_left = 50.0
offset_top = 38.0
offset_right = 550.0
offset_bottom = 168.0
theme_override_font_sizes/font_size = 54
text = "Resume Game"

[node name="QuitGameFromPause" type="Button" parent="in_game/PauseUI/ColorRect"]
process_mode = 3
layout_mode = 0
offset_left = 50.0
offset_top = 214.0
offset_right = 548.0
offset_bottom = 339.0
theme_override_font_sizes/font_size = 54
text = "Quit Game"

[node name="settings" type="Node2D" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="settings"]
offset_right = 1920.0
offset_bottom = 1078.0

[node name="BackButton" type="Button" parent="settings/ColorRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -454.0
offset_top = -289.0
offset_right = -56.0
offset_bottom = -57.0
grow_horizontal = 0
grow_vertical = 0

[node name="Label" type="Label" parent="settings/ColorRect/BackButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -198.5
offset_top = -116.0
offset_right = 198.5
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
text = "Back"
label_settings = SubResource("LabelSettings_rs4ii")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SaveUsername" type="Button" parent="settings/ColorRect"]
layout_mode = 0
offset_left = 1093.0
offset_top = 433.0
offset_right = 1531.0
offset_bottom = 564.0

[node name="Label" type="Label" parent="settings/ColorRect/SaveUsername"]
layout_mode = 0
offset_left = 1.0
offset_top = -1.0
offset_right = 437.0
offset_bottom = 130.0
text = "Save Username"
label_settings = SubResource("LabelSettings_rudnm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="UsernameField" type="TextEdit" parent="settings/ColorRect"]
layout_mode = 0
offset_left = 662.0
offset_top = 476.0
offset_right = 1062.0
offset_bottom = 523.0
theme_override_font_sizes/font_size = 24
placeholder_text = "Write your twitch username here!"

[node name="save_failed" type="Node2D" parent="."]

[node name="SaveFailed" type="CanvasLayer" parent="save_failed"]
visible = false

[node name="ColorRect" type="ColorRect" parent="save_failed/SaveFailed"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.0980392, 0.0980392, 0.701961)

[node name="SaveFailedLabel" type="Label" parent="save_failed/SaveFailed/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -505.0
offset_top = -68.5
offset_right = 505.0
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2
text = "You failed to save:
if you restart you will not recieve your score"
label_settings = SubResource("LabelSettings_3jjmt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartAnywayButton" type="Button" parent="save_failed/SaveFailed/ColorRect/SaveFailedLabel"]
process_mode = 3
light_mask = 0
visibility_layer = 4
layout_mode = 0
offset_left = 569.0
offset_top = 168.5
offset_right = 864.0
offset_bottom = 290.5
icon_alignment = 1

[node name="RestartAnyways" type="Label" parent="save_failed/SaveFailed/ColorRect/SaveFailedLabel/RestartAnywayButton"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 295.0
offset_bottom = 125.0
text = "Restart Anyways"
label_settings = SubResource("LabelSettings_pltci")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="SaveAgainButton" type="Button" parent="save_failed/SaveFailed/ColorRect/SaveFailedLabel"]
process_mode = 3
light_mask = 0
visibility_layer = 4
layout_mode = 0
offset_left = 146.0
offset_top = 168.5
offset_right = 441.0
offset_bottom = 290.5
icon_alignment = 1

[node name="SaveAgain" type="Label" parent="save_failed/SaveFailed/ColorRect/SaveFailedLabel/SaveAgainButton"]
layout_mode = 0
offset_top = 1.0
offset_right = 294.0
offset_bottom = 125.0
text = "Attempt Save Again"
label_settings = SubResource("LabelSettings_pmlq7")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="end_game_score" type="Node2D" parent="save_failed/SaveFailed/ColorRect"]

[node name="score" type="Label" parent="save_failed/SaveFailed/ColorRect/end_game_score"]
offset_left = 852.0
offset_top = 410.0
offset_right = 1005.0
offset_bottom = 490.0
text = "Score:"
label_settings = SubResource("LabelSettings_kswcu")

[node name="points" type="Label" parent="save_failed/SaveFailed/ColorRect/end_game_score"]
offset_left = 1025.0
offset_top = 412.0
offset_right = 1178.0
offset_bottom = 492.0
text = "0"
label_settings = SubResource("LabelSettings_kswcu")

[connection signal="pressed" from="end_game/GameOver/ColorRect/Label/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="main_menu/ColorRect/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="main_menu/ColorRect/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="main_menu/ColorRect/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="in_game/PauseUI/ColorRect/ResumeGameFromPause" to="." method="_on_resume_game_from_pause_pressed"]
[connection signal="pressed" from="in_game/PauseUI/ColorRect/QuitGameFromPause" to="." method="_on_quit_game_from_pause_pressed"]
[connection signal="pressed" from="settings/ColorRect/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="settings/ColorRect/SaveUsername" to="." method="_on_save_username_pressed"]
[connection signal="pressed" from="save_failed/SaveFailed/ColorRect/SaveFailedLabel/RestartAnywayButton" to="." method="_on_restart_anyway_button_pressed"]
[connection signal="pressed" from="save_failed/SaveFailed/ColorRect/SaveFailedLabel/RestartAnywayButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="save_failed/SaveFailed/ColorRect/SaveFailedLabel/SaveAgainButton" to="." method="_on_save_again_button_pressed"]
[connection signal="pressed" from="save_failed/SaveFailed/ColorRect/SaveFailedLabel/SaveAgainButton" to="." method="_on_restart_button_pressed"]
